--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">dinos</string>
+    <string name="maps_android_api_key">@string/MAPS_ANDROID_API_KEY</string>
 </resources>
